--- a/src/main/resources/templates/franquiado/index.html
+++ b/src/main/resources/templates/franquiado/index.html
@@ -20,19 +20,6 @@
                 </thead>
                 <tbody>
                     <tr th:each="umFranquiado : ${listaFranquiados}">
-<<<<<<< HEAD
-                        <td th:text="${umFranquiado.id}"></td>
-                        <td th:text="${umFranquiado.nome}"></td>
-                        <td th:text="${umFranquiado.email}"></td>
-                        <td th:text="${umFranquiado.telefone}"></td>
-                        <td th:text="${umFranquiado.CNPJ}"></td>
-                        <td th:text="${umFranquiado.endereco.logradouro}"></td>
-                        <td th:text="${umFranquiado.endereco.bairro}"></td>
-                        <td th:text="${umFranquiado.endereco.uf}"></td>
-                        <td th:text="${umFranquiado.endereco.cidade}"></td>
-                        <td> 
-=======
-
                        <td th:text="${umFranquiado.id}" class="table-light"></td>
                        <td th:text="${umFranquiado.nome}"  class="table-light"></td>
                        <td th:text="${umFranquiado.email}"  class="table-light"></td>
@@ -40,12 +27,9 @@
                        <td th:text="${umFranquiado.CNPJ}"  class="table-light"></td>
                        <td th:text="${umFranquiado.endereco.logradouro}"  class="table-light"></td>
                        <td th:text="${umFranquiado.endereco.bairro}"  class="table-light"></td>
-                       <td  class="table-light"></td>
+                       <td th:text="${umFranquiado.endereco.uf}"></td>
                        <td th:text="${umFranquiado.endereco.cidade}"  class="table-light"></td>
-
-                       <td class="table-light"> 
-
->>>>>>> 730c29f17ce8b06ba5b66e79e3252661633f10f4
+                        <td class="table-light"> 
                            <a th:href="@{'franquiados/alterar/' + ${umFranquiado.id}}" class="btn btn-warning">Alterar</a>
                            <button class="btn btn-danger js-delete" th:data-id="${umFranquiado.id}">Excluir</button>
                         </td>
@@ -71,6 +55,7 @@
             </div>
             </div>
           </div>
+          <footer th:include="layout :: footer"></footer>
         <script th:src="@{/script.js}"></script>
         <script type="text/javascript" th:src="@{/app.js}"></script>
     </body>
