Atualizando o layout da aplicação

--- a/src/main/resources/static/css/geral.css
+++ b/src/main/resources/static/css/geral.css
@@ -10,6 +10,14 @@ h2{
   font-variant-caps: all-small-caps;
   font-weight: bold;
   font-size: 3rem;
+  margin-top: 5%;
+  text-align: center;
+
+}
+h3{
+  font-variant-caps: all-small-caps;
+  font-weight: bold;
+  font-size: 2rem;
 
 }
 .topnav {
@@ -42,3 +50,15 @@ h2{
 .logo {
     color: white;
 }
+/* 
+  PROCUARAR SOBRE O MEDIA SCRENN E TROCAR A MARGIN DISSO AQUI
+  h2{
+  font-variant-caps: all-small-caps;
+  font-weight: bold;
+  font-size: 3rem;
+  margin-top: 10%;
+
+}
+
+
+*/
