--- a/src/main/resources/templates/estoque/index.html
+++ b/src/main/resources/templates/estoque/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
     <head th:include="layout :: head"></head>
+    <nav th:replace="layout :: menu"></nav>
     <body>
     <!-- <nav th:replace="layout :: menu"></nav> -->
     <main class="container"
