--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <head th:include="layout :: head"></head> 
+        <nav th:replace="layout :: menu"></nav>
     <body>
     <main class="cards">
         <section class="card funcionario">
