--- a/src/main/resources/templates/estoque/index.html
+++ b/src/main/resources/templates/estoque/index.html
@@ -28,7 +28,8 @@
                 <h6 class="card-title text-center">Quantidade Atual</h6>
                 <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${estoque.qtd_franquiado}></span></p>
               </div>
-            </div><div class="card border-success mb-3"
+            </div>
+            <div class="card border-success mb-3"
               style="max-width: 33rem;margin: 1%;">
               <div class="card-header">Produtos</div>
               <div class="card-body">
@@ -36,6 +37,14 @@
                 <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${estoque.qtd_produto}></span></p>
               </div>
             </div>
+            <!-- <div class="card border-success mb-3"
+              style="max-width: 33rem;margin: 1%;">
+              <div class="card-header">Produtos em Estoque</div>
+              <div class="card-body">
+                <h6 class="card-title text-center">Quantidade Atual</h6>
+                <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${estoque.qtd_produto_estoque}></span></p>
+              </div>
+            </div> -->
           </div>
         </section>
   </main>
