--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -28,7 +28,7 @@
                 <img src="/css/img/funcionario.png" alt="funcionario">
             </div>
             <h3>Cadastre um Funcionário</h3>
-            <span>Clique no botão para cadastrar um novo Funcionário</span>
+            <span>Clique no botão para cadastrar um Funcionário</span>
             <a href="/funcionarios" class="button">Cadastre aqui</a>
         </section>
 
