--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHOCOLATERIA</title>
+    <link rel="shortcut icon" th:href="@{/css/img/chocolate.png}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/geral.css}">
 </head>
