--- a/src/main/resources/templates/franquiado/form.html
+++ b/src/main/resources/templates/franquiado/form.html
@@ -1,10 +1,12 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <head th:include="layout :: head"></head>
+ 
     <body>
-
+ 
         <main class="container">
+            <nav th:replace="layout :: menu"></nav> 
             <form th:action="@{/franquiados/(form)}" method="POST" th:object="${franquiado}" class="row g-3">
-                <h2>Cadastre um novo Franquiado:</h2>
+                <h2 style="margin-top: 90px;">Cadastre um novo Franquiado:</h2>
                 <input type="hidden" th:field="*{id}">
                 <div class="col-md-6">
                     <label for="txtnome" class="form-label">Nome:</label>
