--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -44,9 +44,9 @@
             <div class="icon">
                 <img src="/css/img/estoque.png" alt="estoque">
             </div>
-            <h3>Controle de Estoque</h3>
-            <span>Clique no botão para acessar o Controle de Estoque</span>
-            <a href="/estoque" class="button">Controle de Estoque</a>
+            <h3>Controle de Geral</h3>
+            <span>Clique no botão para acessar o Controle de Geral</span>
+            <a href="/estoque" class="button">Controle Geral</a>
         </section>
     </main>
     <footer th:include="layout :: footer"></footer>
