--- a/src/main/resources/templates/estoque/index.html
+++ b/src/main/resources/templates/estoque/index.html
@@ -24,7 +24,7 @@
             <div class="card-header">Produtos</div>
             <div class="card-body">
                 <h6 class="card-title text-center">Quantidade Atual</h6>
-                <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${estoque.qtd_produto}></span></p>
+                <p class="card-text text-center"><span style="font-size: 40px;"  th:text=${somaitensvenda}></span></p>
               </div>
         </section>
 
