--- a/src/main/resources/templates/estoque/index.html
+++ b/src/main/resources/templates/estoque/index.html
@@ -18,7 +18,7 @@
           <div class="card-header">Funcionários</div>
           <div class="card-body">
             <h6 class="card-title text-center">Quantidade Atual</h6>
-            <p class="card-text text-center" th:text=${estoque.qtd_funcionario}><span style="font-size: 40px;"></span></p>
+            <p class="card-text text-center"><span style="font-size: 40px;" th:text=${estoque.qtd_funcionario}></span></p>
           </div>
         </div>
         <div class="card border-danger mb-3"
